# tgc2

./: .gitignore  CMakeLists.txt  README.md  tgc-LICENSE
include/: tgc2.cpp  tgc2.h
src/: tgc2.cpp  tgc2.h
tests/: main.cpp
